<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ocnyang.qbox.app.module.me.UserInfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_userinfo"
            android:layout_width="match_parent"
            android:layout_height="?android:actionBarSize"
            android:background="@color/colorPrimary"
            app:title="@string/editPersonInfo"
            app:titleTextColor="@android:color/white">
        </android.support.v7.widget.Toolbar>

        <FrameLayout
            android:id="@+id/userheader_userinfo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/userhead_img_userinfo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:transitionName="@string/transition_userhead"
                android:src="@drawable/ocnyang"/>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="bottom|right"
                android:background="@drawable/corner_mark_bg"
                android:scaleType="centerInside"
                android:src="@drawable/ic_photo_camera_white_24dp"/>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_person_black_24dp"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/user_name_userinfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:maxLength="16"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginRight="10dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_wc_black_24dp"/>

            <RadioGroup
                android:id="@+id/radiogroup_sex_userinfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radiobutton_man_userinfo"
                    style="@style/Widget.AppCompat.CompoundButton.RadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/man"/>y

                <RadioButton
                    android:id="@+id/radiobutton_woman_userinfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/woman"/>
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginRight="10dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_extension_black_24dp"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/user_geyan_userinfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/yourSay"
                    android:inputType="text"
                    android:maxLength="128"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="60dp"-->
        <!--android:gravity="center_vertical"-->
        <!--android:orientation="horizontal"-->
        <!--android:paddingLeft="15dp"-->
        <!--android:paddingRight="15dp">-->

        <!--<ImageView-->
        <!--android:layout_width="20dp"-->
        <!--android:layout_height="20dp"-->
        <!--android:layout_marginRight="10dp"-->
        <!--android:scaleType="centerInside"-->
        <!--android:src="@drawable/icon_wechat"/>-->

        <!--<android.support.design.widget.TextInputLayout-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content">-->

        <!--<android.support.design.widget.TextInputEditText-->
        <!--android:id="@+id/user_year_userinfo"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:ems="4"-->
        <!--android:gravity="right"-->
        <!--android:hint="年"-->
        <!--android:inputType="number"-->
        <!--android:maxLength="4"/>-->

        <!--</android.support.design.widget.TextInputLayout>-->

        <!--<android.support.design.widget.TextInputLayout-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content">-->

        <!--<android.support.design.widget.TextInputEditText-->
        <!--android:id="@+id/user_month_userinfo"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:ems="2"-->
        <!--android:gravity="right"-->
        <!--android:hint="月"-->
        <!--android:inputType="number"-->
        <!--android:maxLength="2"/>-->
        <!--</android.support.design.widget.TextInputLayout>-->

        <!--<android.support.design.widget.TextInputLayout-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content">-->

        <!--<android.support.design.widget.TextInputEditText-->
        <!--android:id="@+id/user_day_userinfo"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:ems="2"-->
        <!--android:gravity="right"-->
        <!--android:hint="日"-->
        <!--android:inputType="number"-->
        <!--android:maxLength="2"/>-->
        <!--</android.support.design.widget.TextInputLayout>-->
        <!--</LinearLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginRight="10dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_hourglass_full_black_24dp"/>

            <Spinner
                android:id="@+id/starspinner_userinfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/arrays_constellation"
                android:spinnerMode="dropdown">
            </Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginRight="10dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_place_black_24dp"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/user_address_userinfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    android:enabled="true"
                    android:clickable="true"
                    android:focusable="false"
                    android:inputType="text"/>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>